--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,8 +50,7 @@ a {
   color: #808080;
 }
 
-.form-input:hover,
-.form-input:focus {
+.form-input:hover, .form-input:focus {
   border: 1px solid #000;
 }
 
@@ -74,8 +73,7 @@ a {
   color: #fff;
 }
 
-.btn:hover,
-.btn:focus {
+.btn:hover, .btn:focus {
   background-color: #6c8cff;
 }
 
@@ -142,9 +140,7 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
-
-.loader::before,
-.loader::after {
+.loader::before, .loader::after {
   content: "";
   box-sizing: border-box;
   position: absolute;
@@ -153,7 +149,6 @@ a {
   border: 5px solid #FFF;
   animation: prixClipFix 2s linear infinite;
 }
-
 .loader::after {
   border-color: #FF3D00;
   animation: prixClipFix 2s linear infinite, rotate 0.5s linear infinite reverse;
@@ -161,35 +156,16 @@ a {
 }
 
 @keyframes rotate {
-  0% {
-    transform: rotate(0deg)
-  }
-
-  100% {
-    transform: rotate(360deg)
-  }
+  0% {transform: rotate(0deg)}
+  100% {transform: rotate(360deg)}
 }
 
 @keyframes prixClipFix {
-  0% {
-    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)
-  }
-
-  25% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)
-  }
-
-  50% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)
-  }
-
-  75% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%)
-  }
-
-  100% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0)
-  }
+  0% {clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)}
+  25% {clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)}
+  50% {clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)}
+  75% {clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%)}
+  100% {clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0)}
 }
 
 .is-hidden {
